--- a/index.html
+++ b/index.html
@@ -14259,7 +14259,8 @@ a.anchor-link {
 
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Analysis-of-Weather-Down-Under">Analysis of Weather Down Under<a class="anchor-link" href="#Analysis-of-Weather-Down-Under">&#182;</a></h1>
+<h1 id="Analysis-of-Weather-Down-Under">Analysis of Weather Down Under<a class="anchor-link" href="#Analysis-of-Weather-Down-Under">&#182;</a></h1><p>by Charles Fechtig</p>
+
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
